--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/raleway": "^5.0.18",
+    "@mindinventory/order-tracking": "^1.0.2",
     "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
