--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.2.0",
     "react-multi-carousel": "^2.8.5",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
     "swiper": "^11.1.1"
