--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/raleway": "^5.0.18",
     "axios": "^1.6.8",
+    "framer-motion": "^11.2.10",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.2.0",
+    "react-intersection-observer": "^9.10.2",
     "react-multi-carousel": "^2.8.5",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.23.0",
