--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
-    "swiper": "^11.1.1"
+    "swiper": "^11.1.1",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
